src/test/resources/frontendReference/invalid/semanticErr/class/simple/classBadReference.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 20:10 -- Class instance c is not defined in this scope.
